--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 ROM_URL=https://sysupwrdl.vivo.com.cn/upgrade/official/officialFiles/PD2024_A_6.16.2-update-full_1643264937.zip
 ZIP_NAME=origin.zip
-OS_TYPE=Generic
+OS_TYPE=vivo
 BUILD_TYPE=AB
 REPACK_NAME=SGSI.zip
 VERSION=12.1
