--- a/config.env
+++ b/config.env
@@ -1,6 +1,5 @@
-ROM_URL=https://sysupwrdl.vivo.com.cn/upgrade/official/officialFiles/PD2024_A_6.16.2-update-full_1643264937.zip
-ZIP_NAME=origin.zip
+ROM_URL=https://sysupwrdl.vivo.com.cn/upgrade/official/officialFiles/PD2055_A_1.10.20-update-full_1643096410.zip
 OS_TYPE=vivo
 BUILD_TYPE=AB
-REPACK_NAME=SGSI.zip
-VERSION=12.1
+REPACK_NAME=origin.zip
+VERSION=12
